# meloader

./: .gitignore  CMakeLists.txt  README.md  manifest.c  map.c  me_abi.c
cfg/: csme.cfg  me_11.0.0.1205.cfg  spt_h.cfg  spt_h_bup.cfg  spt_lp.cfg  spt_lp_bup.cfg  spt_lp_mia.cfg  sven_spt.cfg
config/: cfgparser.c  devreg.c
include/: att.h  cfg_file.h  devreg.h  dfxagg.h  exi.h  fastspi.h  file.h  fsb.h  fusectl.h  gpdma.h  grant.h  hwif.h  log.h  manifest.h  meloader.h  mipitrace.h  numfmt.h  pmc.h  printf.h  romlib.h  sideband.h  smt.h  susram.h  tracehub.h
include/cpu/: unicorncpu.h  usercpu.h
include/data/: huffman11.c  hufftbl11.c
include/gasket/att/: dev.h  regs.h
include/gasket/enclave/: enclave.h
include/gasket/heci/: heci.h
include/gasket/prim2gasket/: dev.h
include/gasket/timer/: apptimer.h
include/hash/: sha256.h
include/misa/: emu.h  regs.h
include/ocs/: aes.h  dev.h  gp.h  gpdma.h  rsa.h  sks.h
include/ocs/hash/: hash.h
include/pci/: bus.h  cfgspace.h  device.h
include/user/: loader.h  meloader.h  syslib.h
kernel/: dma.c  memory.c  snowball.c  threads.c
lib/include/: libia32.h
periph/aes/: aes.c
periph/att/: att.c  bus.c  sbb.c
periph/cpu/: unicorncpu.c  usercpu.c
periph/dfxagg/: dev.c
periph/dma/: gpdma.c
periph/drng/: dev.c
periph/exi/: dev.c
periph/fuse/: fusectl.c
periph/gasket/att/: dev.c  prim_bus.c  prim_regs.c  sb_master.c  sb_regs.c
periph/gasket/enclave/: dev.c
periph/gasket/heci/: dev.c  status.c
periph/gasket/prim2gasket/: dev.c
periph/gasket/timer/: apptimer.c
periph/hash/: hash.c  sha256.c
periph/misa/: bunit.c  dev.c  hunit.c  rom.c  sram.c
periph/misa/aunit/: bus_target.c  iommu.c  upstream.c
periph/ocs/: dev.c
periph/ocs/aes/: aes.c
periph/ocs/dma/: gp_unit.c  gpdma.c
periph/ocs/hash/: hash.c  sha256.c
periph/ocs/rsa/: rsa.c
periph/ocs/sks/: sks.c
periph/pci/: config.c  master.c  simplefunc.c
periph/pmc/: dev.c
periph/sideband/: sbdev.c
periph/sks/: sks.c
periph/smt/: dev.c
periph/spi/: dev.c  spi.c
periph/susram/: dev.c
periph/tracehub/: ftmr.c  gth.c  rs1.c
romlib/: mmio.c  thunks.c
syslib/: kernelcall.c  thunks.c  tls.c
system/: pchemu.c
user/kernel/: dma.c  grant.c  memory.c  select.c  simple_io.c  snowball.c  threads.c
user/loader/: manifest.c  map.c  me_abi.c  meloader.c
user/romlib/: mmio.c  thunks.c
user/syslib/: kernelcall.c  thunks.c  tls.c
util/: file.c  hwif.c  log.c  numfmt.c  printf.c  trace.c
